# umamoe-embeds

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.watch.yml  local.env
.github/workflows/: docker-deploy.yml
src/: bots.rs  config.rs  embed.rs  html_card.rs  image_card.rs  main.rs  proxy.rs
src/html_card/: activity.rs  affinity.rs  club.rs  clubs.rs  database.rs  home.rs  inheritance.rs  lineage_planner.rs  overview.rs  page.rs  profile.rs  rankings.rs  statistics.rs  tierlist.rs  timeline.rs  tools.rs
